--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -152,9 +152,6 @@ $color-62CDB4: #62cdb4;
 // $color-8C8C8C: #8C8C8C;
 // #BABABA: #BABABA;
 
-
-
-
 // @include center
 @mixin center {
   display: flex;
@@ -179,7 +176,6 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 110%;
-  color: $color-555A5E;
   // background-color: $color-F9F9F9;
 }
 h1,
@@ -314,6 +310,36 @@ a {
     }
   }
 
+  &.btn_dark {
+    width: 271px;
+    height: 60px;
+    background: #363636;
+    border-radius: 3px;
+    color: $color-white;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 500;
+    text-align: center;
+    &:focus-visible {
+      // outline: 1px solid $color-2FA7BE;
+      // outline-offset: 3px;
+    }
+    &:hover {
+      color: $color-white;
+      background-color: #56693e;
+      border-color: #56693e;
+      outline: none;
+      box-shadow: none;
+    }
+    &:active {
+      // color: $color-2FA7BE;
+      // background-color: $color-white;
+      // border-color: $color-2FA7BE;
+      // outline: none;
+      // box-shadow: none;
+    }
+  }
+
   &.btn_green {
     border-radius: 5px;
     height: 60px;
@@ -321,7 +347,7 @@ a {
     font-family: Inter;
     font-size: 18px;
     font-weight: 500;
-    background: #56693E;
+    background: #56693e;
     color: $color-white;
 
     &:focus-visible {
@@ -414,7 +440,7 @@ a {
     }
     &:hover {
       color: $color-white;
-      background-color: #136E63;
+      background-color: #136e63;
       // border-color: $color-37CBD3;
       outline: none;
       box-shadow: none;
@@ -427,7 +453,7 @@ a {
       box-shadow: none;
     }
     &_active {
-      background-color: #136E63;
+      background-color: #136e63;
       // gap: 18px;
 
       @media (max-width: 800px) {
@@ -1088,89 +1114,35 @@ a {
 //     }
 //   }
 // }
-.nav {
-  .nav__list {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 32px;
-
-    .nav__link {
-      // padding: 8px 16px;
-      // display: flex;
-      // flex-flow: row nowrap;
-      // align-items: center;
-      // gap: 7px;
-      // flex: none;
-      // border-radius: 2px;
-      text-decoration: underline;
-      text-underline-offset: 23px;
-      text-decoration-color: transparent;
-      text-decoration-thickness: 4px;
-      transition: color 0.3s ease-in-out, text-decoration-color 0.3s ease-in-out;
-      .nav__text {
-        // color: $color-white;
-        font-family: Inter;
-        font-size: 16px;
-        font-weight: 400;
-        text-align: left;
-        color: #363636;
-        transition: color 0.3s ease-in-out;
-        &:hover {
-          color: #56693E;
-        }
-
-        // text-align: left;
-      }
-      &_active {
-        text-decoration-color: #56693E;
-
-        // background: rgba(255, 255, 255, 0.85);
-        // pointer-events: none;
-        .nav__text {
-          color: #56693E;
-
-          // font-weight: 700;
-          // color: $color-2FA7BE;
-        }
-        &:hover {
-          // background: rgba(255, 255, 255, 0.85);
-        }
-      }
-      // &:focus-visible {
-      //   outline: 1px solid $color-2FA7BE;
-      //   outline-offset: 5px;
-      // }
-      &:hover {
-        color: #56693E;
-        text-decoration-color: #56693E;
-        // border-bottom: 4px solid #56693E;
-        // background: rgba(255, 255, 255, 0.2);
-      }
-      // &:active {
-      //   background: rgba(255, 255, 255, 0.85);
-      //   color: $color-black;
-      //   .nav__text {
-      //     color: $color-black;
-      //   }
-      //   svg path {
-      //     fill: $color-black;
-      //   }
-      //   &::after {
-      //     // background-color: $color-E1670E;
-      //   }
-      // }
-    }
-  }
-}
 
 .developer {
+  grid-column: 7/8;
+  grid-row: 1/3;
+  align-self: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr;
+  gap: 13px;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 12px;
+  // letter-spacing: -0.011em;
+  text-align: left;
+  opacity: 0.5;
+  color: #fff;
+  transition: opasity 0.3s ease-in-out;
+
+  &:hover {
+    opacity: 1;
+  }
   & svg path {
+    fill: rgba(#fff, 0.5);
     transition: fill 0.3s ease-in-out;
   }
+
   &:hover svg path {
-    fill: $color-555A5E;
+    fill: $color-white;
   }
 
   // flex-basis: 48%;
@@ -1302,23 +1274,23 @@ a {
       justify-items: start;
       align-items: start;
       gap: 5px 0;
-  
+
       font-family: Inter;
       font-size: 14px;
       font-weight: 400;
-  
-      border-bottom: 1px solid #A9A9A9;
-  
+
+      border-bottom: 1px solid #a9a9a9;
+
       .form__label-text {
         grid-row: 1/1;
-        color: #BABABA;
+        color: #bababa;
       }
-  
+
       .form__label-star {
         grid-row: 1/1;
         color: #363636;
       }
-  
+
       .form__input {
         grid-column: span 2;
         width: 100%;
@@ -1347,7 +1319,7 @@ a {
     text-align: left;
 
     .form__agreement-text {
-      color: #A9A9A9;
+      color: #a9a9a9;
     }
     .form__agreement-link {
       color: #363636;
@@ -1424,9 +1396,9 @@ a {
 }
 
 .main {
-  padding-top: 82px;
+  padding-top: 80px;
   height: 6434px;
-  background-color: #00c27c;
+  // background-color: #00c27c;
 }
 
 .section {
@@ -2695,9 +2667,87 @@ a {
   left: 0;
   right: 0;
   // width: 100%;
-  height: 84px;
+  height: 80px;
   z-index: 100;
   background-color: rgba($color-white, 0.8);
+
+  .header__nav {
+    .nav__list {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 32px;
+
+      .nav__link {
+        // padding: 8px 16px;
+        // display: flex;
+        // flex-flow: row nowrap;
+        // align-items: center;
+        // gap: 7px;
+        // flex: none;
+        // border-radius: 2px;
+        text-decoration: underline;
+        text-underline-offset: 23px;
+        text-decoration-color: transparent;
+        text-decoration-thickness: 4px;
+        transition: color 0.3s ease-in-out,
+          text-decoration-color 0.3s ease-in-out;
+        .nav__text {
+          // color: $color-white;
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          text-align: left;
+          color: #363636;
+          transition: color 0.3s ease-in-out;
+          &:hover {
+            color: #56693e;
+          }
+
+          // text-align: left;
+        }
+        &_active {
+          text-decoration-color: #56693e;
+
+          // background: rgba(255, 255, 255, 0.85);
+          // pointer-events: none;
+          .nav__text {
+            color: #56693e;
+
+            // font-weight: 700;
+            // color: $color-2FA7BE;
+          }
+          &:hover {
+            // background: rgba(255, 255, 255, 0.85);
+          }
+        }
+        // &:focus-visible {
+        //   outline: 1px solid $color-2FA7BE;
+        //   outline-offset: 5px;
+        // }
+        &:hover {
+          color: #56693e;
+          text-decoration-color: #56693e;
+          // border-bottom: 4px solid #56693E;
+          // background: rgba(255, 255, 255, 0.2);
+        }
+        // &:active {
+        //   background: rgba(255, 255, 255, 0.85);
+        //   color: $color-black;
+        //   .nav__text {
+        //     color: $color-black;
+        //   }
+        //   svg path {
+        //     fill: $color-black;
+        //   }
+        //   &::after {
+        //     // background-color: $color-E1670E;
+        //   }
+        // }
+      }
+    }
+  }
 
   .burger {
     display: none;
@@ -2813,7 +2863,7 @@ a {
         font-size: 22px;
         font-weight: 600;
         text-align: left;
-        color: #56693E;
+        color: #56693e;
         transition: color 0.3s ease-in-out;
         &:hover {
           color: #363636;
@@ -2872,7 +2922,7 @@ a {
       justify-content: space-between;
       // padding: 25px 0;
       gap: 0 20px;
-  
+
       .footer__img-wrap {
         width: 100%;
         height: 100%;
@@ -2883,42 +2933,43 @@ a {
         }
       }
     }
-  
+
     .footer__middle-block {
       width: 100%;
-    height: 100%;
+      height: 100%;
       display: grid;
       grid-template-columns: 323px 1fr 833px;
       grid-template-rows: 1fr;
       gap: 20px;
-      grid-row: 3/4;      
-  
+      grid-row: 3/4;
+
       .contacts {
         width: 100%;
         height: 100%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 62px 61px 60px;
+        grid-template-rows: 53px 52px auto;
         align-items: start;
         justify-items: start;
-        // gap: 15px;
-    
+        gap: 9px;
+
         @media (max-width: 1100px) {
           // align-items: flex-end;
         }
 
         &__item {
           transition: color 0.3s ease-in-out;
-    
+
           &_email {
             font-size: 20px;
-            font-weight: 500;     
-            color: #748D55;
+            font-weight: 500;
+            color: #748d55;
             &:hover {
-              color: $color-2FA7BE;
+              color: $color-black;
             }
           }
           &_phone {
+            align-self: center;
             font-family: Inter;
             font-size: 40px;
             line-height: 100%;
@@ -2926,34 +2977,32 @@ a {
             font-weight: 500;
             color: $color-white;
             &:hover {
-              color: $color-2FA7BE;
+              color: $color-black;
             }
-    
           }
-    
+
           &_address {
             font-size: 16px;
             font-weight: 400;
-            color: #F5F5F5;
+            color: #f5f5f5;
             // line-height: 110%;
           }
-    
         }
       }
-  
+
       .footer__nav-wrap {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1fr;
         gap: 20px;
         grid-column: 3/4;
-        
+
         .footer__nav {
           display: grid;
           grid-template-columns: 1fr;
           grid-template-rows: 20% 56%;
           gap: 0;
-      
+
           @media (max-width: 1100px) {
             // flex: 1 1 30%;
           }
@@ -2967,16 +3016,16 @@ a {
           }
 
           .nav__title {
-            color: #F5F5F5;
+            color: rgba(#f5f5f5, 0.5);
           }
-      
+
           .nav__list {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: repeat(4, 1fr);
             align-items: start;
             gap: 5px;
-      
+
             @media (max-width: 1100px) {
               // flex-flow: column nowrap;
               // align-items: flex-start;
@@ -2987,19 +3036,19 @@ a {
               // align-items: center;
               // gap: 15px;
             }
-      
-            .nav__link {
-              color: #89899A;
-      
-              &.nav__link {
-                .nav__text {
-                  font-weight: 500;
-                  color: $color-555A5E;
-                }
-              }
-            }     
 
-      
+            .nav__link {
+              color: rgba(#fff, 0.1);
+              // font-weight: 500;
+              // color: $color-555A5E;
+
+              transition: color 0.3s ease-in-out;
+
+              &:hover {
+                color: #fff;
+              }
+            }
+
             // flex-flow: row nowrap;
             // justify-content: space-between;
             // gap: 20px;
@@ -3011,18 +3060,17 @@ a {
               // padding-top: 24px;
             }
           }
-          
         }
       }
     }
-    
 
     .footer__bottom-block {
       padding-top: 25px;
       grid-row: 4/5;
       display: grid;
-      grid-template-columns: 116px 2% 28% 1% 203px 2% 10% 6% 32%;
+      grid-template-columns: 116px 2% 390px 3% 203px 5% 185px 6% auto;
       grid-template-rows: repeat(2, 1fr);
+      gap: 2px 0;
       border-top: 1px solid rgba(245, 245, 245, 0.12);
 
       // position: absolute;
@@ -3040,14 +3088,14 @@ a {
       // left: 0;
       // width: 100%;
       // z-index: 5;
-  
+
       @media (max-width: 1100px) {
         position: absolute;
         inset: 0;
         align-items: flex-end;
         padding: 47px 30px;
       }
-  
+
       @media (max-width: 700px) {
         position: relative;
         order: 5;
@@ -3055,24 +3103,25 @@ a {
         align-items: center;
         padding: 0;
         gap: 40px;
-  
+
         // inset: 0;
         // align-items: flex-end;
         // padding: 47px 30px;
       }
-  
+
       .logo {
         grid-column: 1/2;
         grid-row: 1/3;
+        align-self: center;
         // @media (max-width: 768px) {
         //   max-width: 137px;
         //   max-height: 37px;
         // }
-    
+
         @media (max-width: 1100px) {
           // flex: 1 1 50%;
         }
-    
+
         @media (max-width: 700px) {
           // flex: auto;
           // flex-flow: column nowrap;
@@ -3084,13 +3133,13 @@ a {
 
       .footer__copyright {
         grid-column: 3/4;
-          font-family: Inter;
-          font-size: 13px;
-          font-weight: 400;
-          text-align: left;
-          color: #A9A9A9;
-          align-self: end;
-          
+        font-family: Inter;
+        font-size: 13px;
+        font-weight: 400;
+        text-align: left;
+        color: #a9a9a9;
+        align-self: end;
+
         // grid-row: 1/2;
       }
 
@@ -3100,16 +3149,14 @@ a {
         width: 100%;
         height: 49px;
         font-family: Inter;
-font-size: 16px;
-font-weight: 400;
-line-height: 19.36px;
-text-align: center;
-color: #fff;
-opacity: 0.8;
-border: 1px solid rgba(245, 245, 245, 0.5);
-border-radius: 5px;
-
-
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19.36px;
+        text-align: center;
+        color: #fff;
+        opacity: 0.8;
+        border: 1px solid rgba(245, 245, 245, 0.5);
+        border-radius: 5px;
       }
 
       .footer__info-links {
@@ -3118,43 +3165,26 @@ border-radius: 5px;
         grid-template-columns: 52% 48%;
         grid-template-rows: 1fr;
         gap: 5px;
-        font-family: Inter;
-        font-size: 13px;
-        font-weight: 400;
-        text-align: left;
-        color: $color-white;
 
         .footer__policy {
-          font-size: 14px;
+          font-family: Inter;
+          font-size: 13px;
           font-weight: 400;
-          line-height: 17.12px;
-          letter-spacing: 1.1px;
-          color: $color-828282;
+          text-align: left;
+          color: $color-white;
+
+          // color: $color-828282;
           @media (max-width: 1100px) {
-            align-self: flex-start;
+            // align-self: flex-start;
           }
-  
+
           &:hover {
-            color: $color-555A5E;
+            // color: $color-555A5E;
           }
         }
       }
 
       .footer__developer {
-        grid-column: 7/8;
-        grid-row: 1/3;
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        grid-template-rows: 1fr;
-        font-family: Inter;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 12px;
-        // letter-spacing: -0.011em;
-        text-align: left;
-        opacity: 0.5;
-        color: #fff;
-
       }
 
       .footer__desc {
@@ -3232,6 +3262,45 @@ border-radius: 5px;
 // --------------------------------------- GLAVNAYA start ---------------------------------------
 
 .glavnaya {
+  .banner {
+    max-width: 1712px;
+    min-height: 748px;
+    display: grid;
+    grid-template-columns: 740px 1fr;
+    padding: 128px 60px;
+    color: $color-white;
+    background: url("@img/bunner-img.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 15px;
+
+    .bunner__content-wrap {
+      display: grid;
+      // grid-template-columns: 1fr;
+      grid-template-rows: auto 50px 1fr;
+      gap: 30px;
+      .bunner__title {
+        font-family: Inter;
+        font-size: 60px;
+        font-weight: 500;
+        line-height: 72.61px;
+        text-align: left;
+      }
+      .bunner__text {
+        font-family: Inter;
+        font-size: 25px;
+        font-weight: 400;
+        line-height: 30.26px;
+        text-align: left;
+      }
+      .bunner__btn {
+        width: 271px;
+        height: 60px;
+      }
+    }
+  }
+
   // --------------- slider start ---------------
 
   .glavnaya__section_slider {
@@ -6608,7 +6677,7 @@ cursor: pointer; */
               line-height: 15.66px;
               letter-spacing: 0.04em;
               text-align: left;
-              color: #3A3A42;
+              color: #3a3a42;
               // color: rgba(255, 255, 255, 0.8);
               transition: color 0.3s ease-in-out;
 
