--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1397,7 +1397,6 @@ a {
 
 .main {
   padding-top: 80px;
-  height: 6434px;
   // background-color: #00c27c;
 }
 
@@ -3314,10 +3313,40 @@ a {
       gap: 40px;
 
       .about__desc {
+        font-family: Inter;
+font-size: 16px;
+font-weight: 400;
+line-height: 19.36px;
+text-align: left;
+color: #8C8C8C;
+
+
       }
       .about__title {
+font-family: Inter;
+font-size: 80px;
+font-weight: 400;
+line-height: 96.82px;
+text-align: left;
+color: #56693E;
+
+
       }
-      .about__text {
+
+      .about__text-block {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 10px;
+
+        .about__text {
+          font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22.4px;
+  text-align: left;
+  color: #616161;
+        }
       }
 
     }
