--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3261,100 +3261,196 @@ a {
 // --------------------------------------- GLAVNAYA start ---------------------------------------
 
 .glavnaya {
-  .banner {
-    max-width: 1712px;
-    min-height: 748px;
-    display: grid;
-    grid-template-columns: 740px 1fr;
-    padding: 128px 60px;
-    color: $color-white;
-    background: url("@img/bunner-img.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    border-radius: 15px;
-
-    .bunner__content-wrap {
-      display: grid;
-      // grid-template-columns: 1fr;
-      grid-template-rows: auto 50px 1fr;
-      gap: 30px;
-      .bunner__title {
-        font-family: Inter;
-        font-size: 60px;
-        font-weight: 500;
-        line-height: 72.61px;
-        text-align: left;
-      }
-      .bunner__text {
-        font-family: Inter;
-        font-size: 25px;
-        font-weight: 400;
-        line-height: 30.26px;
-        text-align: left;
-      }
-      .bunner__btn {
-        width: 271px;
-        height: 60px;
-      }
-    }
-  }
-
-  .about {
+  .main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 253px 820px;
-    gap: 60px;
+    grid-template-rows: 748px 120px auto 100px auto 100px auto 100px auto 100px auto;
+    // grid-template-rows: minmax(748px, auto) 20px auto auto auto auto auto;
+    // gap: 100px;
 
-    .about__content-wrap {
-      display: grid;
-      grid-template-columns: 60% 1fr;
-      grid-template-rows: 19px 1fr;
-      gap: 40px;
-
-      .about__desc {
-        font-family: Inter;
-font-size: 16px;
-font-weight: 400;
-line-height: 19.36px;
-text-align: left;
-color: #8C8C8C;
-
-
-      }
-      .about__title {
-font-family: Inter;
-font-size: 80px;
-font-weight: 400;
-line-height: 96.82px;
-text-align: left;
-color: #56693E;
-
-
-      }
-
-      .about__text-block {
+    .banner {
+      grid-row: 1 / 2;
+      .banner__container {
+        width: 100%;
+        height: 100%;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr;
-        gap: 10px;
+        grid-template-columns: 740px 1fr;
+        padding: 128px 60px;
+        color: $color-white;
+        background: url("@img/bunner-img.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        border-radius: 15px;
 
-        .about__text {
-          font-family: Inter;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 22.4px;
-  text-align: left;
-  color: #616161;
+        .bunner__content-wrap {
+          display: grid;
+          // grid-template-columns: 1fr;
+          grid-template-rows: auto 50px 1fr;
+          gap: 30px;
+          .bunner__title {
+            font-family: Inter;
+            font-size: 60px;
+            font-weight: 500;
+            line-height: 72.61px;
+            text-align: left;
+          }
+          .bunner__text {
+            font-family: Inter;
+            font-size: 25px;
+            font-weight: 400;
+            line-height: 30.26px;
+            text-align: left;
+          }
+          .bunner__btn {
+            width: 271px;
+            height: 60px;
+          }
         }
       }
-
     }
 
-    .about__img {
-      grid-column: 2 span;
-    }
+    .about {
+      grid-row: 3 / 4;
 
+      .about__container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 253px 820px;
+        gap: 60px 0;
+
+        .about__content-wrap {
+          display: grid;
+          grid-template-columns: 57% 32%;
+          grid-template-rows: 19px 1fr;
+          gap: 16% 11%;
+
+          .about__desc {
+            grid-area: 1 / 1 / 2 / 2;
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19.36px;
+            text-align: left;
+            color: #8c8c8c;
+          }
+          .about__title {
+            grid-area: 2 / 1 / 3 / 2;
+
+            font-family: Inter;
+            font-size: 80px;
+            font-weight: 400;
+            line-height: 96.82px;
+            text-align: left;
+            color: #56693e;
+          }
+
+          .about__text-block {
+            align-items: end;
+            grid-area: 2 / 2 / 3 / 3;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr;
+            gap: 10px;
+
+            .about__text {
+              font-family: Inter;
+              font-size: 16px;
+              font-weight: 400;
+              line-height: 22.4px;
+              text-align: left;
+              color: #616161;
+              letter-spacing: -1.4px;
+
+              &:last-child {
+                align-self: start;
+              }
+            }
+          }
+        }
+
+        .about__img-wrap {
+          grid-column: 2 span;
+          position: relative;
+
+          .about__img {
+            border-radius: 10px;
+            display: block;
+          }
+
+          .gp {
+            cursor: pointer;
+            & path {
+              stroke: transparent;
+              transition: stroke 0.3s ease-in-out;
+              &:hover {
+                stroke: white;
+              }
+            }
+          }
+
+          .gp_1 {
+            position: absolute;
+            left: 399.5px;
+            top: 330.5px;
+          }
+
+          .gp_2 {
+            position: absolute;
+            left: 924.5px;
+            top: 303.5px;
+          }
+
+          .gp_3 {
+            position: absolute;
+            left: 541.5px;
+            top: 206.5px;
+          }
+
+          .gp-no {
+            position: absolute;
+            left: 795.5px;
+            top: 53.5px;
+          }
+
+          .about__img-first {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 7px 14px;
+            gap: 10px;
+
+            position: absolute;
+            width: 106px;
+            height: 36px;
+            left: 727px;
+            top: 425px;
+
+            background: #ffffff;
+            border-radius: 5px;
+          }
+          .about__img-second {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 7px 14px;
+            gap: 10px;
+
+            position: absolute;
+            width: 109px;
+            height: 36px;
+            left: 1009px;
+            top: 155px;
+            background: #748D55;
+            border-radius: 5px;
+            color: white;
+
+          }
+        }
+      }
+    }
   }
 
   // --------------- slider start ---------------
@@ -3363,6 +3459,7 @@ color: #56693E;
     background: $color-F3FAFC;
   }
   .glavnaya__container_slider {
+    grid-row: 5/6;
     width: 100vw;
     max-width: 1920px;
 
@@ -3615,6 +3712,8 @@ color: #56693E;
   // --------------- slider end ---------------
 
   .glavnaya__section_main {
+    grid-row: 7/8;
+
     // max-width: 1920px;
     // margin: 0 auto;
     padding-bottom: 120px;
