--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1328,18 +1328,25 @@ a {
 }
 
 .title {
-  position: relative;
-  padding: 15px 90px;
-  font-size: 32px;
-  font-weight: 700;
-  line-height: 39.14px;
-  text-align: center;
-  color: $color-555A5E;
-  // display: block;
-  margin: 0 auto;
-  width: max-content;
-  max-width: 100%;
-  text-transform: uppercase;
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 48.41px;
+  text-align: left;
+  color: #363636;
+
+  // position: relative;
+  // padding: 15px 90px;
+  // font-size: 32px;
+  // font-weight: 700;
+  // line-height: 39.14px;
+  // text-align: center;
+  // color: $color-555A5E;
+  // // display: block;
+  // margin: 0 auto;
+  // width: max-content;
+  // max-width: 100%;
+  // text-transform: uppercase;
   // overflow: visible;
   // background-image: url(@img/bg-title.svg);
   // background-repeat: no-repeat;
@@ -1347,10 +1354,10 @@ a {
   // background-size: 180px;
   // z-index: 1;
   // padding: 10px 0;
-  background-image: url(@img/bg-title.svg);
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: 180px;
+  // background-image: url(@img/bg-title.svg);
+  // background-repeat: no-repeat;
+  // background-position: top left;
+  // background-size: 180px;
   // &::before {
   //   content: "";
   //   position: absolute;
@@ -1367,21 +1374,21 @@ a {
   // }
 
   @media (max-width: 1280px) {
-    padding: 15px 60px;
+    // padding: 15px 60px;
   }
   @media (max-width: 760px) {
-    font-family: Commissioner;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 24.46px;
-    // background-position: 2px 25px;
-    background-size: 80px;
-    padding: 5px 42px;
+    // font-family: Commissioner;
+    // font-size: 20px;
+    // font-weight: 700;
+    // line-height: 24.46px;
+    // // background-position: 2px 25px;
+    // background-size: 80px;
+    // padding: 5px 42px;
 
     // width: 100%;
   }
   @media (max-width: 400px) {
-    width: 100%;
+    // width: 100%;
   }
 }
 
@@ -3038,13 +3045,9 @@ a {
 
             .nav__link {
               color: rgba(#fff, 0.1);
-              // font-weight: 500;
-              // color: $color-555A5E;
-
               transition: color 0.3s ease-in-out;
-
               &:hover {
-                color: #fff;
+                // color: #fff;
               }
             }
 
@@ -3316,7 +3319,7 @@ a {
       .about__container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 253px 820px;
+        grid-template-rows: minmax(253px, auto) 820px;
         gap: 60px 0;
 
         .about__content-wrap {
@@ -3346,14 +3349,16 @@ a {
           }
 
           .about__text-block {
-            align-items: end;
+            // align-items: end;
             grid-area: 2 / 2 / 3 / 3;
             display: grid;
             grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 10px;
+            grid-template-rows: 24px auto 12px 1fr;
+            align-items: start;
+            // gap: 10px;
 
             .about__text {
+              grid-row: 2 / 3;
               font-family: Inter;
               font-size: 16px;
               font-weight: 400;
@@ -3363,7 +3368,8 @@ a {
               letter-spacing: -1.4px;
 
               &:last-child {
-                align-self: start;
+                grid-row: 4 / 5;
+                // align-self: start;
               }
             }
           }
@@ -3443,12 +3449,289 @@ a {
             height: 36px;
             left: 1009px;
             top: 155px;
-            background: #748D55;
+            background: #748d55;
             border-radius: 5px;
             color: white;
-
           }
         }
+      }
+    }
+
+    .choice {
+      grid-row: 5 / 6;
+
+      .my-select {
+        position: relative;
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: space-between;
+        gap: 3px;
+        width: 150px;
+        height: 50px;
+        border: 1px solid rgb(210, 210, 210);
+        border-radius: 7px;
+        background: rgb(255, 255, 255);
+        padding: 8px 12px;
+        transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
+        .my-select__arrow {
+          width: 19px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .my-select_w_350 {
+          width: 350px;
+        }
+        .my-select__wrapper {
+          display: flex;
+          flex-flow: column nowrap;
+          align-items: flex-start;
+          justify-content: space-between;
+          gap: 2px;
+        }
+        .my-select__placeholder {
+          color: rgba(21, 0, 0, 0.5);
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 110%;
+        }
+        .my-select__text {
+          position: absolute;
+          top: 20px;
+          left: 11px;
+          color: rgb(34, 34, 34);
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 110%;
+          display: none;
+          white-space: nowrap;
+          width: 88%;
+          white-space: nowrap; /* Текст не переносится */
+          overflow: hidden; /* Обрезаем всё за пределами блока */
+          text-overflow: ellipsis; /* Добавляем многоточие */
+        }
+        .my-select__text_active {
+          display: block;
+        }
+
+        .my-select__list {
+          position: absolute;
+          overflow: hidden;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          /* высота выпадающего списка: */
+          height: 400px;
+
+          border: 1px solid #816f6f;
+          border-radius: 7px;
+          background: rgb(249, 249, 249);
+          z-index: 1;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 110%;
+          color: rgb(34, 34, 34);
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+          display: none;
+        }
+
+        .my-select__list_type-filter {
+          height: auto;
+        }
+        .my-select__list .my-select__item {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          height: 34px;
+          padding: 0 12px;
+        }
+        .my-select__list .my-select__item:hover {
+          background: rgba(87, 0, 0, 0.2);
+        }
+        .my-select__list .my-select__item:hover .checkbox__mark {
+          border: 1.06px solid rgb(255, 255, 255);
+        }
+        .my-select:hover {
+          border: 1px solid rgb(140, 139, 139);
+          background: rgb(249, 249, 249);
+        }
+
+        &.my-select_open {
+          border: 1px solid rgb(140, 139, 139);
+          background: rgb(249, 249, 249);
+        }
+        &.my-select_open .my-select__list {
+          display: block;
+        }
+        &.my-select_open .my-select__arrow {
+          transform: rotate(180deg);
+        }
+        .my-select_active .my-select__placeholder {
+          position: absolute;
+          font-size: 10px;
+          top: 8px;
+          left: 11px;
+        }
+        .my-select__checkbox {
+          margin-bottom: 0;
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+        }
+        .my-select__checkbox .checkbox__mark {
+          top: 0;
+          width: 17px;
+          height: 17px;
+          border: 1.06px solid rgb(210, 210, 210);
+        }
+
+      //   .my-select_multiple {
+      //     position: relative;
+      //     display: flex;
+      //     flex-flow: row nowrap;
+      //     align-items: center;
+      //     justify-content: space-between;
+      //     gap: 3px;
+      //     width: 150px;
+      //     height: 50px;
+      //     border: 1px solid rgb(210, 210, 210);
+      //     border-radius: 7px;
+      //     background: rgb(255, 255, 255);
+      //     padding: 8px 12px;
+      //     transition: all 0.3s ease-in-out;
+      //   .my-select_multiple .my-select__arrow {
+      //     width: 19px;
+      //     display: flex;
+      //     justify-content: center;
+      //     align-items: center;
+      //   }
+      //   .my-select_multiple_w_250 {
+      //     width: 250px;
+      //   }
+      //   .my-select_multiple_w_350 {
+      //     width: 350px;
+      //   }
+      //   .my-select_multiple .my-select__wrapper {
+      //     display: flex;
+      //     flex-flow: column nowrap;
+      //     align-items: flex-start;
+      //     justify-content: space-between;
+      //     gap: 2px;
+      //   }
+      //   .my-select_multiple .my-select__placeholder {
+      //     color: rgba(21, 0, 0, 0.5);
+      //     font-size: 16px;
+      //     font-weight: 400;
+      //     line-height: 110%;
+      //   }
+      //   .my-select_multiple .my-select__text {
+      //     color: rgb(34, 34, 34);
+      //     font-size: 16px;
+      //     font-weight: 400;
+      //     line-height: 110%;
+      //     width: 0;
+      //     height: 0;
+      //     display: none;
+      //     white-space: nowrap;
+      //   }
+      //   .my-select_multiple .my-select__text_active {
+      //     width: 100%;
+      //     height: 100%;
+      //     display: block;
+      //   }
+      //   .my-select_multiple .simplebar-track.simplebar-vertical {
+      //     top: 4px;
+      //     bottom: 4px;
+      //     right: 5px;
+      //     width: 4px;
+      //   }
+      //   .my-select_multiple .simplebar-scrollbar:before {
+      //     top: 0px;
+      //     bottom: 0%;
+      //     left: 0px;
+      //     right: 0px;
+      //   }
+      //   .my-select_multiple .my-select__list {
+      //     position: absolute;
+      //     top: 100%;
+      //     left: 0;
+      //     width: 100%;
+      //     max-height: 300px;
+      //     border: 1px solid #816f6f;
+      //     border-radius: 7px;
+      //     background: rgb(249, 249, 249);
+      //     z-index: 1;
+      //     font-size: 16px;
+      //     font-weight: 400;
+      //     line-height: 110%;
+      //     color: rgb(34, 34, 34);
+      //     cursor: pointer;
+      //     transition: all 0.3s ease-in-out;
+      //     display: none;
+      //   }
+      //   .my-select_multiple .my-select__list .my-select__item {
+      //     display: flex;
+      //     justify-content: flex-start;
+      //     align-items: center;
+      //     height: 34px;
+      //     padding: 0 12px;
+      //   }
+      //   .my-select_multiple .my-select__list .my-select__item:hover {
+      //     background: rgba(87, 0, 0, 0.2);
+      //   }
+      //   .my-select_multiple
+      //     .my-select__list
+      //     .my-select__item:hover
+      //     .checkbox__mark {
+      //     border: 1.06px solid rgb(255, 255, 255);
+      //   }
+      //   .my-select_multiple:hover {
+      //     border: 1px solid rgb(140, 139, 139);
+      //     background: rgb(249, 249, 249);
+      //   }
+      //   .my-select_multiple_open {
+      //     border: 1px solid rgb(140, 139, 139);
+      //     background: rgb(249, 249, 249);
+      //   }
+      //   .my-select_multiple_open .my-select__list {
+      //     display: block;
+      //   }
+      //   .my-select_multiple_open .my-select__arrow {
+      //     transform: rotate(180deg);
+      //   }
+      //   .my-select_multiple_active .my-select__placeholder {
+      //     position: absolute;
+      //     font-size: 10px;
+      //     top: 8px;
+      //     left: 11px;
+      //   }
+      //   .my-select_multiple .my-select__checkbox {
+      //     margin-bottom: 0;
+      //     display: flex;
+      //     align-items: center;
+      //     justify-content: flex-start;
+      //   }
+      //   .my-select_multiple .my-select__checkbox .checkbox__mark {
+      //     position: absolute;
+      //     top: 8px;
+      //     left: 8px;
+      //     width: 17px;
+      //     height: 17px;
+      //     border: 1.06px solid rgb(210, 210, 210);
+      //   }
+
+      //   .my-select_multiple .my-select__item_active .checkbox__mark::before {
+      //     background-size: 66%;
+      //   }
+
+      //   .my-select_multiple .my-select__item_active .checkbox__mark {
+      //     border: none !important;
+      //     background-color: #225f0d;
+      //   }
+      // }
+
       }
     }
   }
